✨ Setting up with THREE

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Getting Started</title>
+    <title>Welcome to my Office</title>
   </head>
-  <body></body>
+  <body>
+    <div id="scene-renderer"></div>
+  </body>
 </html>
